# oniguruma

./: .gitignore  .travis.yml  CMakeLists.txt  HISTORY  Makefile.am  Makefile.in  README  README.ja  README.md  README_japanese  SECURITY.md  aclocal.m4  build_harnesses.sh  build_libfuzzer_harnesses.sh  config.h.in  configure  configure.ac  configure.in  dist.info  index.html  index_ja.html  make_win32.bat  make_win64.bat  onig-config.cmake.in  oniguruma.h  oniguruma.pc.cmake.in  oniguruma.pc.in  regcomp.c  regparse.c  sbom.cdx.json
contributed/: libfuzzer-onig.cpp  makefile
doc/: API  API.ja  CALLOUTS.API  CALLOUTS.API.ja  CALLOUTS.BUILTIN  CALLOUTS.BUILTIN.ja  CHANGES_7.0  FAQ.ja  OnigurumaSyntax.md  RE  RE.ja  SYNTAX.md  UNICODE_PROPERTIES  onig_syn_md.c
harnesses/: ascii_compatible.dict  base.c  deluxe-encode-harness.c  deluxe.c  encode-harness.c  makefile  oniguruma-mb.dict  regset-harness.c  regset.c  syntax-harness.c
sample/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  bug_fix.c  callback_each_match.c  callout.c  count.c  crnl.c  each_match.c  echo.c  encode.c  listcap.c  names.c  posix.c  regset.c  scan.c  simple.c  sql.c  syntax.c  user_property.c
src/: .gitignore  Makefile.am  Makefile.in  Makefile.windows  ascii.c  big5.c  config.h.cmake.in  config.h.in  config.h.win32  config.h.win64  config.h.windows.in  cp1251.c  euc_jp.c  euc_jp_prop.c  euc_kr.c  euc_tw.c  gb18030.c  gperf_fold_key_conv.py  gperf_unfold_key_conv.py  iso8859_1.c  iso8859_10.c  iso8859_11.c  iso8859_13.c  iso8859_14.c  iso8859_15.c  iso8859_16.c  iso8859_2.c  iso8859_3.c  iso8859_4.c  iso8859_5.c  iso8859_6.c  iso8859_7.c  iso8859_8.c  iso8859_9.c  koi8.c  koi8_r.c  make_property.sh  make_unicode_egcb.sh  make_unicode_egcb_data.py  make_unicode_fold.sh  (+43 more)
test/: .gitignore  Makefile.am  Makefile.in  test_back.c  test_options.c  test_regset.c  test_syntax.c  test_utf8.c  testc.c  testp.c  testu.c
test/fuzzers/: oniguruma_scan_fuzzer.c
tis-ci/: config.h  test_back.config  test_regset.config  test_syntax.config  test_utf8.config  testc.config  testu.config
win32/: Makefile
windows/: testc.c
